--- a/style.css
+++ b/style.css
@@ -4,10 +4,11 @@
 }
 
 :root{
-    --fundo-calc:rgb(44, 14, 71);
+    --fundo-calc: #283345;
     --fundo-text-area: blueviolet;
-    --bnts: #292135;
+    --bnts: #283345;
     --hover-bnts: #493c5e;
+    --txt-code: #ffffff;
 }
 
 body{
@@ -22,17 +23,16 @@ body{
 #calc{
     background-color: var(--fundo-calc);
 
-    width: 30vw;
+    width: 25vw;
     height: 80vh;
 
-    display: grid;
-    
-    justify-content: center;
-    align-content: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
-    grid-template-columns: repeat(4, 22%);
-    grid-template-rows: repeat(5, 18%);
-    gap: 2%;
+    border-radius: 25px;
+
+    box-shadow: -15px -15px 0 0 #1d2738;
 }
 
 #text-area{
@@ -41,25 +41,42 @@ body{
     justify-content: center;
     align-content: center;
 
+
     background-color: transparent;
-    grid-column: span 4;
 
-    color: white;
-    font-size: 2rem;
+    color: var(--txt-code);
+
+    width: 100%;
+    height: 20%;
+
+    overflow-x: hidden;
 }
 
-#pisca{
-    color: white;
-    display: inline-block;
-    width: 10px;
-    animation: piscar 1s steps(1) infinite;
-
-    margin-left: 1%;
+#text-area i#texto{
+    font-size: 3.5rem;
+    width: 90%;
+    text-align: right;
 }
 
-@keyframes piscar {
-    0%, 50% {opacity: 1;}
-    51%, 100% {opacity: 0;}
+#bnts{
+    display: grid;
+    
+    justify-content: center;
+    align-content: center;
+
+    grid-template-columns: repeat(4, 20%);
+    grid-template-rows: repeat(4, 18%);
+    gap: 4%;
+
+    height: 100%;
+}
+
+#bnts .op{
+    color: #7743ca !important;
+}
+
+#bnts .op:hover{
+    color: #7743caad !important;
 }
 
 #calc .input, #calc #igual{
@@ -72,11 +89,17 @@ body{
     color: #fff;
 
     font-size: 2rem;
+
+    box-shadow: -5px -5px 4px #212d41;
+
+    border-radius: 30%;
 }
 
 #calc .input:hover,  #calc #igual:hover{
-    background-color: var(--hover-bnts);
-
+    background-color: #273142;
+    box-shadow: inset -5px -5px 4px #212d41;
+    transform: translateY(1%);
+    color: #ffffffb9;
 }
 
 #calc #zero{
