--- a/style.css
+++ b/style.css
@@ -18,6 +18,14 @@ body{
     align-content: center;
 
     height: 100vh;
+
+    background-color: #17151b;
+}
+
+#night{
+    position: absolute;
+    top: 2%;
+    right: 2%;
 }
 
 #calc{
